# APi2022-Project-tools

./: LICENSE  README.md  install.sh  requirements.txt
tests/extra_large/: input_XL012.txt
tests/heavy_insert/: input_IN001.output.txt  input_IN001.txt
tests/heavy_long/: input_HL001.output.txt  input_HL001.txt
tests/heavy_short/: input_HS001.output.txt  input_HS001.txt  input_HS002.txt  input_HS003.txt  input_HS004.txt  input_HS005.txt  input_HS006.output.txt  input_HS006.txt  input_HS007.output.txt  input_HS007.txt  input_HS008.output.txt  input_HS008.txt  input_HS009.output.txt  input_HS009.txt  input_HS010.txt  input_HS011.output.txt  input_HS011.txt  input_HS013.output.txt  input_HS013.txt
tests/open/: insert.output.txt  insert.txt  slide.output.txt  slide.txt  test1.output.txt  test1.txt  test2.output.txt  test2.txt  test3.output.txt  test3.txt
tests/slides/: input_SL001.output.txt  input_SL001.txt
tools/: pyproject.toml
tools/test_tools/: common.py  generator.py  run_all.py  run_single.py  test_all.py
