[tool.poetry]
name = "test_tools"
version = "0.1.0"
description = ""
authors = ["Federico Lolli <federico123579@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
gentest = "test_tools.generator:main"
runtest = "test_tools.run_all:main"
testall = "test_tools.test_all:main"
testsingle = "test_tools.run_single:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
